--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p class="p2">This doesn't stop the site from being improved, but it still <strong class="strong">won't</strong> be launched. Perhaps on GitHub, for testing.</p>
         <div class="links1">
             <a class="contact" href="https://t.me/xxxiter">Contact me</a>
-            <a class="git" href="https://github.com/vatikano1241-star">My GitHub</a>
+            <a class="git" href="https://github.com/nootcool">My GitHub</a>
         </div>
     </main>
 </body>
